Water level & last update of main stream in node
